11_minikube/deployments/backups/misc/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "keycloak.minikube"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: keycloak
            port: 
              name: service
